--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Testing 123</h1>
+<head>
+  <script type="text/javascript" src="https://app.secureprivacy.ai/script/607420898b4b49e75e3bb6b1.js"></script>
+</head>
+
+
+
+<h1>Testing 12345</h1>
