--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head>
+    <script type="text/javascript" src="https://app.secureprivacy.ai/script/607430588b4b49e75e3c4fbf.js"></script>
+
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
