--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WXDL8N2');</script>
 <!-- End Google Tag Manager -->
  
- https://app.secureprivacy.ai/#/usersettings/installation
-
+<script type="text/javascript" src="https://app.secureprivacy.ai/script/62396c4f0f6627e0def296d8.js"></script>
+ 
 </head>
 
 <body>
